hphp/hack/test/typecheck/aktuple/list_error2.php.exp
File "list_error2.php", line 5, characters 8-12:
This tuple has 3 elements (Typing[4097])
File "list_error2.php", line 7, characters 3-21:
2 were expected
